Required version of Nadir2 was changed. Task #1 - Update the template codebase from php 5.3 to php 7.1.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.1.0",
-        "selikhovleonid/nadir2": "dev-master"
+        "selikhovleonid/nadir2": "2.*"
     },
     "autoload": {
         "psr-4": {
